tried to fix no scrollbar on looney tunes but didn't

--- a/public/css/looneys.css
+++ b/public/css/looneys.css
@@ -57,7 +57,6 @@ li:nth-child(odd) {
   color: white;
   background: black;
   width: 84%;
-  overflow-y: scroll;
   border: 0;
   font-family: cursive;
   font-size: 1.5em;
@@ -132,7 +131,7 @@ h1 {
   bottom:12.5%;
   width:85%;
   height: 75%;
-  overflow-y:scroll;
+  overflow-y: scroll;
   overflow-x: hidden;
   word-wrap: break-word;
 }
